--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0; 
     padding: 0; 
-    font-family:'Courier New', Courier, monospace; 
+    font-family:'Poppins', sans-serif;  
     box-sizing: border-box;
 }
