--- a/style.css
+++ b/style.css
@@ -14,3 +14,13 @@
     padding-left: 10%;
 }
 
+.container h1 {
+    display: flex;
+    align-items: center;
+    font-size: 35px;
+    font-weight: 600;
+}
+ 
+.container h1 img {
+    width: 60px;
+}
